--- a/frontend/.vscode/settings.json
+++ b/frontend/.vscode/settings.json
@@ -3,6 +3,7 @@
         "Cancelarconsulta",
         "datosperfil",
         "Formshema",
-        "Ipertencion"
+        "Ipertencion",
+        "perfilmedico"
     ]
 }
